--- a/client/src/app/admin/photo-management/photo-management.component.html
+++ b/client/src/app/admin/photo-management/photo-management.component.html
@@ -4,7 +4,7 @@
       <img src='{{photo.url}}' class='img-thumbnail p-1' alt='{{photo.username}}'>
 
       <div class='btn-group d-flex'>
-          <button class='btn btn-sm btn-outline-success mr-1' (click)='approvePhoto(photo.id)'>Approve</button>
+          <button class='btn btn-sm btn-outline-success me-1' (click)='approvePhoto(photo.id)'>Approve</button>
           <button class='btn btn-sm btn-outline-danger' (click)='rejectPhoto(photo.id)'>Reject</button>
       </div>
   </div>
