--- a/client/src/app/errors/server-error/server-error.component.html
+++ b/client/src/app/errors/server-error/server-error.component.html
@@ -1,7 +1,7 @@
   <!-- server page for deevelopment mode -->
 <div class="card bg-light mb-3" style="max-width: 60rem;">
-    <h3 class="font-weight-bold card-title ml-3">Internal Server Error</h3>
-    <h6 class="card-subtitle ml-4 text-muted">Refreshing the page will make the error disappear</h6>
+    <h3 class="font-weight-bold card-title ms-3">Internal Server Error</h3>
+    <h6 class="card-subtitle ms-4 text-muted">Refreshing the page will make the error disappear</h6>
     <hr>
     <div class="card-body">
       <ng-container>
