--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
         <h1>Find your matches</h1>
         <p class="lead">Come on in to view your matches</p>
         <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary btn-md mr-2">Register</button>
+            <button (click)="registerToggle()" class="btn btn-primary btn-md me-2">Register</button>
             <button class="btn btn-secondary btn-md">Learn More</button>
         </div>
     </div>
