--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -32,7 +32,7 @@
         <div class="card-footer bg-light">
           <div class="btn-group d-flex">
             <button class="btn btn-outline-primary">Like</button>
-            <button (click)="selectTab(3)" class="btn btn-outline-success ml-1">Message</button>
+            <button (click)="selectTab(3)" class="btn btn-outline-success ms-1">Message</button>
           </div>
         </div>
       </div>
