--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -47,11 +47,11 @@
             <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
             <h4 class="mt-2" style="text-align: center;"><strong>Location</strong></h4>
             <hr>
-            <div class="form-inline">
+            <div class="d-flex">
               <label for="city"> <h6><strong>City:</strong></h6></label>
               <input [(ngModel)]="member.city" type="text" name="city" class="form-control mx-2">
-              <label class="ml-4" for="country"> <h6><strong>Country:</strong></h6>:</label>
-              <input [(ngModel)]="member.country" type="text" name="country" class="form-control ml-2">
+              <label class="ms-4" for="country"> <h6><strong>Country:</strong></h6>:</label>
+              <input [(ngModel)]="member.country" type="text" name="country" class="form-control ms-2">
             </div>
           </form>
         </tab>
