--- a/client/src/app/admin/user-management/user-management.component.html
+++ b/client/src/app/admin/user-management/user-management.component.html
@@ -1,15 +1,18 @@
 <div class="row">
   <table class="table">
-    <tr class="bg-">
-      <th style="width: 30%;"><h5 class="font-weight-bold">Username:</h5></th>
-      <th style="width: 40%;"><h5 class="font-weight-bold">Active Role(s):</h5></th>
-      <th style="width: 30%;"></th>
-    </tr>
-    <tr *ngFor="let user of users">
-      <td>{{user.username}}</td>
-      <td>{{user.roles}}</td>
-      <td><button (click)="openRolesModal(user)" type="button" class="btn text-white bg-primary btn-outline-primary">Edit</button></td>
-
-    </tr>
+    <thead>
+      <tr>
+        <th style="width: 30%;"><h5 class="font-weight-bold">Username:</h5></th>
+        <th style="width: 40%;"><h5 class="font-weight-bold">Active Role(s):</h5></th>
+        <th style="width: 30%;"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <td>{{user.username}}</td>
+        <td>{{user.roles}}</td>
+        <td><button (click)="openRolesModal(user)" type="button" class="btn text-white bg-primary btn-outline-primary">Edit</button></td>
+      </tr>
+    </tbody>
   </table>
 </div>
