--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,25 +1,25 @@
 <div class="text-center mt-3">
-  <h2>Your Matches - {{pagination?.totalItems}} found</h2>
+  <h2>Found {{pagination?.totalItems}} Matches</h2>
 </div>
 
 <div class="container mt-3">
   <form #form="ngForm" (ngSubmit)="loadMembers()" autocomplete="off" class="d-flex mb-3">
     <!-- min age filter -->
     <div class="d-flex mx-2">
-      <label class="form-label"> <h5 class="text-primary">Min Age :</h5></label>
+      <label class="col-form-label me-2"> <h5 class="text-primary">Min Age :</h5></label>
       <input type="number" class="age-input form-control"
         name="minAge" [(ngModel)]="userParams.minAge">
     </div>
     <!-- max age filter -->
     <div class="d-flex px-3">
-      <label class="form-label"> <h5 class="text-primary">Max Age :</h5></label>
+      <label class="col-form-label me-2"> <h5 class="text-primary">Max Age :</h5></label>
       <input type="number" class="age-input form-control"
         name="maxAge" [(ngModel)]="userParams.maxAge">
     </div>
     <!-- gender filter -->
     <div class="d-flex px-1">
-      <label class="form-label"> <h5 class="text-primary">Show :</h5></label>
-      <select class="form-select form-control ml-2" style="width: 10rem; height: 3.1rem"
+      <label class="col-form-label"> <h5 class="text-primary">Show :</h5></label>
+      <select class="form-select-input form-control ms-1" style="width: 10rem; height: 3.1rem"
         name="gender" [(ngModel)]="userParams.gender">
         <option *ngFor="let gender of genderList" [value]="gender.value">
           {{gender.display}}
@@ -27,12 +27,12 @@
       </select>
       <!-- Apply filter/reset buttons -->
     </div>
-    <button class="btn-primary ml-1" type="submit">Apply Filters</button>
-    <button (click)="resetFilters()" class="btn-info ml-1" type="submit">Reset Filters</button>
+    <button class="filter btn-primary ms-1" type="submit">Apply Filters</button>
+    <button (click)=" resetFilters()" class="filter btn-info ms-1" type="submit">Reset Filters</button>
 
     <!-- Oder By buttons -->
     <div class="col">
-      <div class="btn-group mt-2">
+      <div class="btn-group ms-2 mt-2">
         <!-- last active button -->
         <button
           class="btn-primary"
@@ -45,7 +45,7 @@
         </button>
         <!-- last created button -->
         <button
-          class="btn-primary ml-1"
+          class="btn-primary ms-1"
           type="button"
           name="oderBy"
           (click)="loadMembers()"
