--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -55,7 +55,7 @@
         >
         <div class="input-group-append">
           <button [disabled]="!messageForm.valid || loading"
-            class="btn btn-outline-primary ml-1"
+            class="btn btn-outline-primary ms-1"
             type="submit">Send <i *ngIf="loading" class="fa fa-spinner fa-spin"></i></button>
         </div>
       </div>
